# av-multi-task-perception

./: .gitignore  README.md  data_extract_frames.py  data_prep_stereo.py  eval.py  high-level_overview.md  infer.py  main.py  pyproject.toml  train.py
config/: base_config.yaml
src/datasets/: av_dataset.py  transforms.py
src/engine/: evaluator.py  trainer.py
src/losses/: detection_loss.py  segmentation_loss.py  total_loss.py
src/models/: backbone.py  heads.py  multi_task_net.py  neck.py
src/utils/: metrics.py  visualization.py
