[project]
name = "av-perception"
version = "0.1.0"
description = "Hand crafted application of a AV perception model for road use"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "opencv-python>=4.13.0.92",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
]
